--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <button onclick="play()" id="easy">easy</button>
-    <audio id="audio" src="easy.ogg"></audio>
+    <audio id="audio" src="easy.mp3"></audio>
   </body>
   <script>
     function play() {
